Sonarlint, pmd, spotbugs and ide analyze fixes